# MentorOS

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml
data/assessment/: grammar.json  grammar_prototype.json  listening.json  reading.json  vocabulary.json
data/curriculum/: english_grammar.json  listening.json  reading.json  vocabulary.json
data/lessons/: grammar_practice.json  grammar_tenses_practice.json  vocabulary_practice.json
data/seed/: toefl_academic.json
data/teacher/: persona.json
mentoros/: __init__.py  ai.py  api.py  assess.py  cli.py  curriculum.py  events.py  knowledge.py  lesson.py  planner.py  profile.py  review.py  storage.py  teacher.py
mentoros/assessment/: __init__.py  adaptive.py  question_bank.py  selector.py  session.py  stop.py
scripts/: dev.sh  start.sh
tests/: test_api.py  test_assess.py  test_assessment.py  test_chat.py  test_events.py  test_generated.py  test_knowledge.py  test_lesson.py  test_planner.py  test_profile.py  test_review.py  test_seed.py  test_storage.py  test_teacher.py
web/: package-lock.json  package.json
web/app/: layout.js  page.js
web/app/assess/: page.js
web/app/assessment/: page.js
web/app/chat/: page.js
web/app/lesson/: page.js
web/app/placement/: page.js
web/app/plan/: page.js
